# WeilanEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Frame Graph Editor.json  LICENSE  README.MD  Simple.json  docs.md  game.scene  version.md
Source/: CMakeLists.txt
Source/Editor/: EditorState.cpp  EditorState.hpp  GameEditor.cpp  GameEditor.hpp  Launcher.cpp  Renderer.cpp  Renderer.hpp  Tool.hpp  Window.cpp  Window.hpp
Source/Editor/EditorGUI/: ObjectField.hpp
Source/Editor/FrameGraph/: FrameGraphEditor.cpp  FrameGraphEditor.hpp
Source/Editor/Inspectors/: FrameGraphInspector.cpp  GameObjectInspector.cpp  Inspector.hpp  InspectorRegistry.cpp  InspectorRegistry.hpp  MaterialInspector.cpp  MeshInspector.cpp  MeshRendererInspector.cpp  ModelInspector.cpp  PhysicsBodyInspector.cpp  SceneInspector.cpp  TextureInspector.cpp
Source/Editor/Inspectors/Components/: CameraInspector.cpp  LightFieldProbeInspector.cpp  LightInspector.cpp  MeshRendererInspector.cpp  PlayerControllerInspector.cpp  SceneEnvrionmentInspector.cpp
Source/Editor/SceneEditor/: SceneEditor.hpp
Source/Editor/Tools/: EnvironmentBaker.cpp  EnvironmentBaker.hpp  GameView.cpp  GameView.hpp
Source/Editor/Windows/: AssetWindow.cpp  AssetWindow.hpp  Window.hpp  WorldGridModuleEditor.cpp
Source/Engine/: Launcher.cpp  WeilanEngine.cpp  WeilanEngine.hpp
Source/Engine/Asset/: Material.cpp  Material.hpp  Shader.cpp  Shader.hpp
Source/Engine/AssetDatabase/: Asset.cpp  Asset.hpp  AssetDatabase.cpp  AssetDatabase.hpp  Importers.cpp  Importers.hpp
Source/Engine/AssetDatabase/Exporters/: Exporter.hpp  KtxExporter.cpp  KtxExporter.hpp
Source/Engine/AssetDatabase/ImportOptions/: TextureImportOptions.hpp
Source/Engine/AssetDatabase/Importers/: AssetImporter.hpp  AssetLoader.cpp  AssetLoader.hpp  InternalAssetLoader.cpp  InternalAssetLoader.hpp  LegacyLoader.cpp  LegacyLoader.hpp  ModelLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  TextureImporter.hpp  TextureLoader.cpp  TextureLoader.hpp
Source/Engine/AssetDatabase/Internal/: AssetData.cpp  AssetData.hpp
Source/Engine/Code/: EnumFlags.hpp  JsonExt.cpp  Ptr.hpp  UUID.cpp  Utils.hpp
Source/Engine/Core/: Asset.cpp  Asset.hpp  AssetObject.cpp  AssetObject.hpp  EngineInternalResources.cpp  EngineInternalResources.hpp  EngineSettings.hpp  EngineState.cpp  EngineState.hpp  GLBScene.hpp  GameLoop.cpp  GameLoop.hpp  GameObject.cpp  GameObject.hpp  Gizmo.cpp  Gizmo.hpp  GizmoList.hpp  Globals.cpp  Globals.hpp  Input.cpp  Input.hpp  ManagedObject.hpp  Model.cpp  Model.hpp  Model2.cpp  Model2.hpp  Object.cpp  Object.hpp  Resource.cpp  Resource.hpp  SafeReferenceable.hpp  Texture.cpp  Texture.hpp  Time.cpp  Time.hpp
Source/Engine/DualMoonGraph/: DualMoonGraph.cpp  DualMoonGraph.hpp
Source/Engine/Editor/: EditorContext.hpp  EditorRegister.cpp  EditorRegister.hpp  EditorTickModule.cpp  EditorTickModule.hpp  GameEditor.cpp  GameEditor.hpp  GameEditorRenderer.cpp  GameEditorRenderer.hpp  Icons.hpp  MainMenuModule.hpp  ManiMenuModule.cpp  Renderer.cpp  Renderer.hpp  Tool.hpp
Source/Engine/Event/: Event.cpp  Event.hpp
Source/Engine/GamePlay/: Input.cpp  Input.hpp
Source/Engine/GfxDriver/: Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.hpp  CommandQueue.hpp  CompiledSpv.hpp  DescriptorSetSlot.hpp  Fence.hpp  FrameBuffer.hpp  GfxBuffer.hpp  GfxDriver.cpp  GfxDriver.hpp  GfxEnums.cpp  GfxEnums.hpp  GfxEventListener.hpp  GfxFactory.cpp  GfxFactory.hpp  Image.hpp  ImageDescription.hpp  ImageView.hpp  RenderGraph.hpp  RenderPass.hpp  ResourceHandle.hpp  Semaphore.hpp  ShaderConfig.hpp  ShaderInfo.cpp  ShaderInfo.hpp  ShaderLoader.cpp  ShaderLoader.hpp  ShaderModule.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderResource.cpp  ShaderResource.hpp  StorageBuffer.hpp  SwapchainImage.hpp  VertexBufferBinding.hpp  Window.hpp
Source/Engine/Internal/: SceneUpdater.hpp
Source/Engine/Libs/: Constants.hpp  EngineErrors.hpp  EnumFlags.hpp  GLB.cpp  GLB.hpp  ID.hpp  JsonExt.cpp  JsonExt.hpp  LinearAllocator.hpp  Math.cpp  Math.hpp  Profiler.hpp  Ptr.hpp  UUID.cpp  UUID.hpp  Utils.cpp  Utils.hpp
Source/Engine/NodeGraph/: NodeGraph.cpp  NodeGraph.hpp
Source/Engine/Physics/: JoltDebugRenderer.cpp  JoltDebugRenderer.hpp  Physics.cpp  Physics.hpp
Source/Engine/Platform/: FileExplore.cpp  FileExplore.hpp
Source/Engine/Profiler/: Profiler.cpp  Profiler.hpp
Source/Engine/Rendering/: BuiltInRenderGraph.cpp  BuiltInRenderGraph.hpp  BuiltinShader.cpp  BuiltinShader.hpp  CmdSubmitGroup.cpp  CmdSubmitGroup.hpp  CompiledSpv.hpp  DrawList.cpp  DrawList.hpp  DualMoonRenderer.cpp  DualMoonRenderer.hpp  EngineInternalShaders.cpp  EngineInternalShaders.hpp  EnumStringMapping.cpp  EnumStringMapping.hpp  FrameData.hpp  GfxRenderer.hpp  GfxResourceTransfer.cpp  GfxResourceTransfer.hpp  Graphics.cpp  Graphics.hpp  ImmediateGfx.cpp  ImmediateGfx.hpp  Material.cpp  Material.hpp  RenderContext.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RendererData.hpp  RenderingData.hpp  RenderingUtils.cpp  RenderingUtils.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Server.cpp  Server.hpp  Shader.cpp  Shader.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  (+4 more)
Source/Engine/Script/: LuaBackend.cpp  LuaBackend.hpp  LuaCode.hpp  LuaWraps.hpp
Source/Engine/Scripting/: LuaBackend.hpp  LuaCode.hpp  LuaWraps.hpp
Source/Engine/System/: EventSystem.hpp
Source/Engine/Utils/: AssetLoader.cpp  AssetLoader.hpp  EnumStringMapping.cpp  EnumStringMapping.hpp  InternalAssets.cpp  InternalAssets.hpp  Intersection.cpp  Intersection.hpp  ReadBinary.hpp  Structs.hpp
Source/Scripts/: ts.py
Source/Test/: CMakeLists.txt  EngineUnitTest.cpp  TestEngine.cpp  Test_AssetDatabase.cpp  Test_Editor.cpp  Test_Engine.cpp  Test_EnvironmentBaker.cpp  Test_Game.cpp  Test_GameLoop.cpp  Test_Importer.cpp  Test_Importers.cpp  Test_Libs_Image.cpp  Test_LuaScript.cpp  Test_NodeGraph.cpp  Test_RenderGraph.cpp
Source/Test/Resources/: Cube.glb  LuaScript.lua
Source/Test/TEditor/: TestAssetObject.cpp
Source/Test/TGfxDriver/: Test_GfxDriver.cpp  Test_Utils.cpp  Test_VKDriver.cpp
Source/python/: GLSLProcessor.py
(+467 files in other folders)
